tests/snapshots/regression/collections__error_limit_missing_commas.snap
---
source: tests/integration/regression_snapshots.rs
---
$ flux --no-cache tests/fixtures/collections/error_limit_missing_commas.flx
exit_code: 1

[ 1 of 10] Compiling  Assert
[ 2 of 10] Compiling  Array
[ 3 of 10] Compiling  List
[ 4 of 10] Compiling  Either
[ 5 of 10] Compiling  IO
[ 6 of 10] Compiling  Math
[ 7 of 10] Compiling  Numeric
[ 8 of 10] Compiling  Option
[ 9 of 10] Compiling  String
• 12 errors, 1 note • tests/fixtures/collections/error_limit_missing_commas.flx
error[E076]: Missing Closing Delimiter

Expected a closing `)` to match this opening `(`.

  tests/fixtures/collections/error_limit_missing_commas.flx:2:6
  |
2 | print(
  |      ^

note: Expected `)` before this token.
  tests/fixtures/collections/error_limit_missing_commas.flx:4:3
  |
4 |   11 12 13 14 15 16 17 18 19 20
  |   ^^


error[E073]: Missing Comma

Missing comma between arguments.

  tests/fixtures/collections/error_limit_missing_commas.flx:3:5
  |
3 |   1 2 3 4 5 6 7 8 9 10
  |     ^

Hint:
  Add a comma between items, e.g. `f(a, b)`.


error[E073]: Missing Comma

Missing comma between arguments.

  tests/fixtures/collections/error_limit_missing_commas.flx:3:7
  |
3 |   1 2 3 4 5 6 7 8 9 10
  |       ^

Hint:
  Add a comma between items, e.g. `f(a, b)`.


error[E073]: Missing Comma

Missing comma between arguments.

  tests/fixtures/collections/error_limit_missing_commas.flx:3:9
  |
3 |   1 2 3 4 5 6 7 8 9 10
  |         ^

Hint:
  Add a comma between items, e.g. `f(a, b)`.


error[E031]: Expected Expression

Expected expression, found `)`.

  tests/fixtures/collections/error_limit_missing_commas.flx:9:1
  |
9 | );
  | ^


error[E031]: Expected Expression

Expected expression, found `;`.

  tests/fixtures/collections/error_limit_missing_commas.flx:9:2
  |
9 | );
  |  ^


Note: Repeated Parser Diagnostics Suppressed

I hid 6 additional repeated parser diagnostic(s) for "Missing Comma" in this file. Use `--all-errors` to see every occurrence.

  tests/fixtures/collections/error_limit_missing_commas.flx:0:1
  |
... and 6 more errors not shown (use --max-errors to increase).

Found 12 errors and 1 note.
